Adding the initial implementation of Yaml Scene reader.

--- a/RayTracerTest/Base.lproj/Main.storyboard
+++ b/RayTracerTest/Base.lproj/Main.storyboard
@@ -840,9 +840,9 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eKh-3P-W7i">
-                                <rect key="frame" x="14" y="197" width="81" height="32"/>
+                                <rect key="frame" x="20" y="197" width="69" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cKU-Dx-fOr">
+                                <buttonCell key="cell" type="push" title="Yaml" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cKU-Dx-fOr">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
