Fix for group bounding boxes not transforming correctly!

--- a/SwiftlyRT/Base.lproj/Main.storyboard
+++ b/SwiftlyRT/Base.lproj/Main.storyboard
@@ -822,6 +822,17 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tjt-a8-M0C">
+                                <rect key="frame" x="360" y="515" width="66" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="push" title="Test" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="3wz-2g-AIx">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="testButton:" target="XfG-lQ-9wD" id="8c2-Bl-C7A"/>
+                                </connections>
+                            </button>
                         </subviews>
                     </view>
                     <connections>
